Technical Test - Development with Node.js and React: - Create the User model/controller/route to implement login and sign up functionalities. - Include the packages bcrypt and validator to enhance User model functions. - Implement JSONWebToken to set securely authentication between frontend and backend.

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ DBUSER=root
 DBPASS=root
 DBNAME=disney
 CORS_DOMAINS=http://localhost:3000, http://127.0.0.1:3000
+JWT_SECRET=idico-disney-mern-fullstack-app
