--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=4000
-DBPORT=3300
-DBHOST=localhost
+DBPORT=3306
+DBHOST=mysql
 DBUSER=root
 DBPASS=root
-DBNAME=disney
+DBNAME=disney_universe
 CORS_DOMAINS=http://localhost:3000, http://127.0.0.1:3000
